# wml2viewer

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  build.rs  changelog.md
.github/workflows/: ci.yml  release.yml
docs/: SCRIPT.md  SPEC.md  followup.md  linux-smoke.md  modules.md  nexttodo.md  repo-split.md  state.md  todo.md  zipreader.md
examples/: bench_archive.rs  bench_browser.rs  bench_decode.rs  bench_filer.rs
resources/: help.html
resources/i18n/: en.json  ja.json
resources/icons/: svg.md
src/: app.rs  bench.rs  benchlog.rs  lib.rs  main.rs  options.rs  path_classification.rs  wml2_formats.rs
src/configs/: config.rs  mod.rs
src/configs/resourses/: mod.rs  text.rs
src/dependent/: desktop.rs  mod.rs
src/dependent/android/: mod.rs
src/dependent/darwin/: mod.rs
src/dependent/linux/: mod.rs
src/dependent/other/: mod.rs
src/dependent/plugins/: ffmpeg.rs  mod.rs  susie64.rs  system.rs
src/dependent/windows/: mod.rs
src/drawers/: affine.rs  canvas.rs  clear.rs  draw.rs  filter.rs  grayscale.rs  image.rs  mod.rs  utils.rs
src/filesystem/: browser.rs  cache.rs  function.rs  lha_file.rs  listed_file.rs  mod.rs  navigator.rs  path.rs  protocol.rs  sort.rs  source.rs  worker.rs  zip_file.rs
src/ui/: mod.rs
src/ui/i18n/: mod.rs
src/ui/input/: dispatch.rs  mod.rs
src/ui/menu/: mod.rs
src/ui/render/: layout.rs  mod.rs  texture.rs  worker.rs
src/ui/viewer/: dialogs.rs  mod.rs  navigation.rs  options.rs  state.rs  workers.rs
tests/support/: ui_viewer.rs
tests/support/src/: app_tests.rs  benchlog_tests.rs  main_tests.rs  (+3 more)
(+22 files in other folders)
